--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <header>
         <style>
             header {
-                background-image: url(img/bggg.jpg);
+                background-image: url(img/bgggg.jpg);
                 color: #fff
             }
         </style>
@@ -767,21 +767,21 @@
             <div class="row row-centered ">
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="./files_new/Huaxiu_Yao.jpg" height="150" width="150"
+                        <img src="./files_new/micah-goldblum.png" height="150" width="150"
                             class="img-responsive img-circle">
-                        <a href="https://huaxiuyao.mystrikingly.com/">
-                            <h4>Huaxiu Yao</h4>
+                        <a href="https://goldblum.github.io/">
+                            <h4>Micah Goldblum</h4>
                         </a>
-                        <p class="text-muted">UNC-Chapel Hill</p>
+                        <p class="text-muted">New York University</p>
                     </div>
                 </div>
 
                 <div class="row row-centered ">
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="./files_new/MB.png" height="150" width="150" class="img-responsive img-circle">
-                            <a href="https://www.cs.unc.edu/~mbansal/">
-                                <h4>Mohit Bansal</h4>
+                            <img src="./files_new/valeriia-cherepanova.png" height="150" width="150" class="img-responsive img-circle">
+                            <a href="https://vcherepanova.github.io/">
+                                <h4>Valeriia Cherepanova</h4>
                             </a>
                             <p class="text-muted">UNC-Chapel Hill</p>
                         </div>
@@ -790,48 +790,41 @@
                     <div class="row row-centered ">
                         <div class="col-sm-2">
                             <div class="team-member">
-                                <img src="./files_new/ZD.jpg" height="150" width="150"
+                                <img src="./files_new/niljana-akpinar.png" height="150" width="150"
                                     class="img-responsive img-circle">
-                                <a href="https://www.zhundeng.org/">
-                                    <h4>Zhun Deng</h4>
+                                <a href="https://nakpinar.github.io/">
+                                    <h4>Nil-Jana Akpinar</h4>
                                 </a>
-                                <p class="text-muted">Columbia University</p>
+                                <p class="text-muted">Amazon AWS AI/ML</p>
                             </div>
                         </div>
-
-
 
                         <div class="row row-centered ">
                             <div class="col-sm-2">
                                 <div class="team-member">
-                                    <img src="./files_new/PI.jpeg" height="150" width="150"
+                                    <img src="./files_new/zhen-xiang.png" height="150" width="150"
                                         class="img-responsive img-circle">
                                     <a href="https://izmailovpavel.github.io/">
-                                        <h4>Pavel Izmailov </h4>
+                                        <h4>Zhen Xiang</h4>
                                     </a>
-                                    <p class="text-muted">OpenAI &amp; New York University</p>
+                                    <p class="text-muted">University of Illinois Urbana-Champaign</p>
                                 </div>
                             </div>
 
                             <div class="row row-centered ">
                                 <div class="col-sm-2">
                                     <div class="team-member">
-                                        <img src="./files_new/Chelsea_Finn.jpeg" height="150" width="150"
+                                        <img src="./files_new/bo-li.png" height="150" width="150"
                                             class="img-responsive img-circle">
-                                        <a href="https://ai.stanford.edu/~cbfinn/">
-                                            <h4>Chelsea Finn</h4>
+                                        <a href="https://aisecure.github.io/">
+                                            <h4>Bo Li</h4>
                                         </a>
-                                        <p class="text-muted">Stanford University</p>
+                                        <p class="text-muted">University of Chicago</p>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="container">
-                                <!-- <div class="row">
-                                    <div class="col-lg-12">
-                                        <h2 class="section-heading">Workshop Organizers</h2>
-                                    </div>
-                                </div> -->
                                 <br>
                                 <br>
                                 <br>
@@ -839,49 +832,61 @@
                                 <div class="row row-centered ">
                                     <div class="col-sm-2">
                                         <div class="team-member">
-                                            <img src="./files_new/HH.jpg" height="150" width="150"
+                                            <img src="./files_new/yifei-wang.png" height="150" width="150"
                                                 class="img-responsive img-circle">
-                                            <a href="https://hhexiy.github.io/">
-                                                <h4>He He</h4>
+                                            <a href="https://yifeiwang77.com/">
+                                                <h4>Yifei Wang</h4>
                                             </a>
-                                            <p class="text-muted">New York University</p>
+                                            <p class="text-muted">Massachusetts Institute of Technology</p>
                                         </div>
                                     </div>
                                     <div class="row row-centered ">
                                         <div class="col-sm-2">
                                             <div class="team-member">
-                                                <img src="./files_new/PWK.jpg" height="150" width="150"
+                                                <img src="./files_new/avital-shafran.png" height="150" width="150"
                                                     class="img-responsive img-circle">
                                                 <a href="https://koh.pw/">
-                                                    <h4>Pang Wei Koh</h4>
+                                                    <h4>Avital Shafran</h4>
                                                 </a>
-                                                <p class="text-muted">University of Washington</p>
+                                                <p class="text-muted">Hebrew University</p>
                                             </div>
                                         </div>
 
                                         <div class="row row-centered ">
                                             <div class="col-sm-2">
                                                 <div class="team-member">
-                                                    <img src="./files_new/EM.png" height="150" width="150"
+                                                    <img src="./files_new/dan-handrycks.png" height="150" width="150"
                                                         class="img-responsive img-circle">
-                                                    <a href="https://ericmitchell.ai/">
-                                                        <h4>Eric Mitchell</h4>
+                                                    <a href="https://people.eecs.berkeley.edu/~hendrycks/">
+                                                        <h4>Dan Handrycks</h4>
                                                     </a>
-                                                    <p class="text-muted">Stanford University</p>
+                                                    <p class="text-muted">Center for AI Safety</p>
                                                 </div>
                                             </div>
 
                                             <div class="row row-centered ">
                                                 <div class="col-sm-2">
                                                     <div class="team-member">
-                                                        <img src="./files_new/CX.jpg" height="150" width="150"
+                                                        <img src="./files_new/yang-bai.png" height="150" width="150"
                                                             class="img-responsive img-circle">
-                                                        <a href="https://cihangxie.github.io/">
-                                                            <h4>Cihang Xie</h4>
+                                                        <a href="https://bymavis.github.io/">
+                                                            <h4>Yang Bai</h4>
                                                         </a>
-                                                        <p class="text-muted">University of California Santa Cruz</p>
+                                                        <p class="text-muted">Tencent</p>
                                                     </div>
                                                 </div>
+
+                                                <div class="row row-centered ">
+                                                    <div class="col-sm-2">
+                                                        <div class="team-member">
+                                                            <img src="./files_new/niv-cohen.png" height="150" width="150"
+                                                                class="img-responsive img-circle">
+                                                            <a href="https://www.cs.huji.ac.il/w~nivc/">
+                                                                <h4>Niv Cohen</h4>
+                                                            </a>
+                                                            <p class="text-muted">Hebrew University</p>
+                                                        </div>
+                                                    </div>
 
 
 
