--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
                                             <div class="team-member">
                                                 <img src="./files_new/avital-shafran.png" height="150" width="150"
                                                     class="img-responsive img-circle">
-                                                <a href="https://koh.pw/">
+                                                <a href="https://avital.shafran.co.il/">
                                                     <h4>Avital Shafran</h4>
                                                 </a>
                                                 <p class="text-muted">Hebrew University</p>
@@ -884,7 +884,7 @@
                                                             <a href="https://www.cs.huji.ac.il/w~nivc/">
                                                                 <h4>Niv Cohen</h4>
                                                             </a>
-                                                            <p class="text-muted">Hebrew University</p>
+                                                            <p class="text-muted">New York University</p>
                                                         </div>
                                                     </div>
 
