--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <li>How can we identify and characterize unreliable and irresponsible behaviors in FMs? Topics include susceptibility to spurious features, prompt sensitivity, lack of self-consistency, and issues of nonfactuality or “hallucinations”</li>
                     <li>How should we assess the potentially harmful capabilities of FMs and quantify their societal impact? For example, how can we predict the consequences of misuse of highly capable large language models?</li>
                     <li>How can we pinpoint and understand the causes behind known or emerging sources of FM unreliability? This may involve examining training data, objectives, architectural design, learned weights, or other facets.</li><li>What principles or guidelines should inform the design of the next generation of FMs to ensure they are both reliable and responsible?</li><li>Can we establish theoretical frameworks that guarantee the reliability and responsibility of FMs?</li><li>In practical applications, how might we leverage domain-specific knowledge to guide FMs towards improved reliability and responsibility across diverse areas, such as drug discovery, education, or clinical health?</li></ul><br> -->
-                    <p></p><br>
+                    <!-- <p></p><br> -->
                 </div>
             </div>
         </div>
@@ -273,8 +273,7 @@
                             <p class="large text-muted"><b>Submission URL:</b> [URL] </p>
 
                             <p class="large text-muted"><b>Length and Formatting:</b> Submitted papers must be up to
-                                [TODO, 4?] pages in pdf format using the <a
-                                    href='https://icml.cc/Conferences/2024/CallForPapers'>ICML 2024 Style Files</a>,
+                                4 pages in pdf format using the <a href='https://icml.cc/Conferences/2024/CallForPapers'>ICML 2024 Style Files</a>,
                                 including figures and tables. Authors are permitted to upload unlimited supplementary
                                 materials and references with their submissions. Please upload only one document,
                                 placing appendices and supplementary materials at the end of the submission. Reviewers
