--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                         </li>
 
                         <li>
-                            <a class="page-scroll" href="index.html#" style="left: -80px; font-size:22px;">ICLR 2024
-                                Workshop on Reliable and Responsible Foundation Models</a>
+                            <a class="page-scroll" href="index.html#" style="left: -80px; font-size:22px;">ICML 2024 Workshop on
+                                Red Teaming GenAI: What Can We Learn from Adversaries?</a>
                         </li>
                         <li>
                             <a style="padding-left: 20px;"></a>
