--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body id="page-top" class="index">
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -44,12 +44,7 @@
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <!--<ul class="nav navbar-nav navbar-middle">
-                        <li class="hidden">
-                            <a href="#page-top"></a>
-                        </li>
 
-                    </ul>-->
                     <ul class="nav navbar-nav navbar-middle">
                         <li class="hidden active">
                             <a href="index.html#page-top"></a>
