--- a/index.html
+++ b/index.html
@@ -180,12 +180,15 @@
                         quantitatively evaluate harmful capabilities of these models? (3) How can we mitigate risks
                         found through red teaming? (4) Can we make safety guarantees?
                     </p>
-                    <!-- <br> -->
-                    <!-- <ul class="large text-muted" ,="" style="float:left; width: 100%"> 
-                    <li>How can we identify and characterize unreliable and irresponsible behaviors in FMs? Topics include susceptibility to spurious features, prompt sensitivity, lack of self-consistency, and issues of nonfactuality or “hallucinations”</li>
-                    <li>How should we assess the potentially harmful capabilities of FMs and quantify their societal impact? For example, how can we predict the consequences of misuse of highly capable large language models?</li>
-                    <li>How can we pinpoint and understand the causes behind known or emerging sources of FM unreliability? This may involve examining training data, objectives, architectural design, learned weights, or other facets.</li><li>What principles or guidelines should inform the design of the next generation of FMs to ensure they are both reliable and responsible?</li><li>Can we establish theoretical frameworks that guarantee the reliability and responsibility of FMs?</li><li>In practical applications, how might we leverage domain-specific knowledge to guide FMs towards improved reliability and responsibility across diverse areas, such as drug discovery, education, or clinical health?</li></ul><br> -->
-                    <!-- <p></p><br> -->
+
+                    <p class="large text-muted">
+                        <b>Format: </b> Our workshop will include (i) a competition on defending against jailbreaking attacks described
+                        above, (ii) invited talks from leading researchers on AI safety, (iii) contributed talks for
+                        exceptional submissions and competition winners, (iv) a poster session, (v) a panel discussion. To ensure the accessibility of our workshop for virtual attendees, we will stream all
+                        presentations and facilitate questions from online attendees via Rocketchat. Find the associated
+                        schedule below.
+                    </p>
+                   
                 </div>
             </div>
         </div>
