--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         <li>
                             <a class="page-scroll" href="index.html#competition">Competition</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="page-scroll" href="index.html#format">Format</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a class="page-scroll" href="index.html#call">Call for Papers</a>
                         </li>
@@ -188,6 +188,14 @@
                         presentations and facilitate questions from online attendees via Rocketchat. Find the associated
                         schedule below.
                     </p>
+
+                    <ul class="large text-muted" style="float:left; width: 100%">
+                        <li>Theoretical foundations of FMs and related domains</li>
+                        <li>Empirical investigations into the reliability and responsibility of various FMs</li>
+                        <li>In-depth discussions exploring new dimensions of foundation model reliability and responsibility</li>
+                        <li>Interventions during pre-training to enhance the reliability and responsibility of FMs</li>
+                        <li>Innovations in fine-tuning processes to bolster the reliability and responsibility of FMs</li>
+                    <li>Discussions on aligning models with potentially superhuman capabilities to human values</li><li>Benchmark methodologies for assessing the reliability and responsibility of FMs</li><li>Issues of reliability and responsibility of FMs in broad applications</li></ul>
                    
                 </div>
             </div>
@@ -230,7 +238,7 @@
     </section>
 
     <!-- Format Section -->
-    <section id="format">
+    <!-- <section id="format">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
@@ -254,7 +262,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- call for papers -->
     <!-- <section id="call" class="bg-mid-gray"> -->
