--- a/index.html
+++ b/index.html
@@ -182,21 +182,23 @@
                     </p>
 
                     <p class="large text-muted">
-                        <b>Format: </b> Our workshop will include (i) a competition on defending against jailbreaking attacks described
-                        above, (ii) invited talks from leading researchers on AI safety, (iii) contributed talks for
-                        exceptional submissions and competition winners, (iv) a poster session, (v) a panel discussion. To ensure the accessibility of our workshop for virtual attendees, we will stream all
-                        presentations and facilitate questions from online attendees via Rocketchat. Find the associated
-                        schedule below.
+                        <b>Format: </b> Our workshop will include , (ii) , (iii) , (iv) , (v) a panel discussion. 
                     </p>
 
                     <ul class="large text-muted" style="float:left; width: 100%">
-                        <li>Theoretical foundations of FMs and related domains</li>
-                        <li>Empirical investigations into the reliability and responsibility of various FMs</li>
-                        <li>In-depth discussions exploring new dimensions of foundation model reliability and responsibility</li>
-                        <li>Interventions during pre-training to enhance the reliability and responsibility of FMs</li>
-                        <li>Innovations in fine-tuning processes to bolster the reliability and responsibility of FMs</li>
-                    <li>Discussions on aligning models with potentially superhuman capabilities to human values</li><li>Benchmark methodologies for assessing the reliability and responsibility of FMs</li><li>Issues of reliability and responsibility of FMs in broad applications</li></ul>
-                   
+                        <li>a competition on defending against jailbreaking attacks described below</li>
+                        <li>invited talks from leading researchers on AI safety</li>
+                        <li>contributed talks for exceptional submissions and competition winners</li>
+                        <li>a poster session</li>
+                        <li>a panel discussion</li>
+                    </ul>
+
+                    <p class="large text-muted">
+                        To ensure the accessibility of our workshop for virtual attendees, we will stream all
+                        presentations and facilitate questions from online attendees via Rocketchat. Find the associated
+                        schedule below.
+                    </p>
+                        
                 </div>
             </div>
         </div>
