--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </p>
 
                     <p class="large text-muted">
-                        <b>Format: </b> Our workshop will include , (ii) , (iii) , (iv) , (v) a panel discussion. 
+                        <b>Format: </b> Our workshop will include:
                     </p>
 
                     <ul class="large text-muted" style="float:left; width: 100%">
