--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                     </p>
 
                     <ul class="large text-muted" style="float:left; width: 100%">
-                        <li>a competition on defending against jailbreaking attacks described below</li>
-                        <li>invited talks from leading researchers on AI safety</li>
-                        <li>contributed talks for exceptional submissions and competition winners</li>
-                        <li>a poster session</li>
-                        <li>a panel discussion</li>
+                        <li>A competition on defending against jailbreaking attacks described below</li>
+                        <li>Invited talks from leading researchers on AI safety</li>
+                        <li>Contributed talks for exceptional submissions and competition winners</li>
+                        <li>A poster session</li>
+                        <li>A panel discussion</li>
                     </ul>
 
                     <p class="large text-muted">
