--- a/index.html
+++ b/index.html
@@ -295,27 +295,16 @@
                                 on the workshop website. We welcome ongoing and unpublished work, as well as papers that
                                 are under review at the time of submission. </p>
 
-                            <!-- <ul class="large text-muted" style="float:left; width: 100%">
-                                <li>Theoretical foundations of FMs and related domains</li>
-                                <li>Empirical investigations into the reliability and responsibility of various FMs</li>
-                                <li>In-depth discussions exploring new dimensions of foundation model reliability and responsibility</li>
-                                <li>Interventions during pre-training to enhance the reliability and responsibility of FMs</li>
-                                <li>Innovations in fine-tuning processes to bolster the reliability and responsibility of FMs</li>
-                            <li>Discussions on aligning models with potentially superhuman capabilities to human values</li><li>Benchmark methodologies for assessing the reliability and responsibility of FMs</li><li>Issues of reliability and responsibility of FMs in broad applications</li></ul>
-                            <p class="large text-muted"><mybold>Submission URL:</mybold> &nbsp; <a href="https://openreview.net/group?id=ICLR.cc/2024/Workshop/R2-FM">https://openreview.net/group?id=ICLR.cc/2024/Workshop/R2-FM
-</a></p>
-                            <p class="large text-muted"><mybold>Format:</mybold> &nbsp;All submissions must be in PDF format. Submissions are limited to <b>four</b> content pages, including all figures and tables; unlimited additional pages containing references and supplementary materials are allowed. Reviewers may choose to read the supplementary materials but will not be required to. <b>Camera-ready versions may go up to five content pages.</b>
-                            </p>
-                            <p class="large text-muted"><mybold>Style file:</mybold> &nbsp; You must format your submission using the ICLR 2024 LaTeX style file. For your convenience, we have modified the main conference style file to refer to the R2-FM workshop: <a href="iclr_r2fm.sty">iclr_r2fm.sty</a>. Please include the references and supplementary materials in the same PDF as the main paper. The maximum file size for submissions is 50MB. Submissions that violate the ICLR style (e.g., by decreasing margins or font sizes) or page limits may be rejected without further review.
-                            </p>
-                            <p class="large text-muted"><mybold>Dual-submission policy:</mybold> &nbsp;We welcome ongoing and unpublished work. We will also accept papers that are under review at the time of submission, or that have been recently accepted without published proceedings.
-                            </p>
-                            <p class="large text-muted"><mybold>Non-archival:</mybold> &nbsp;The workshop is a non-archival venue and will not have official proceedings. Workshop submissions can be subsequently or concurrently submitted to other venues.
-                            </p>
-                            <p class="large text-muted"><mybold>Visibility:</mybold> &nbsp;Submissions and reviews will not be public. Only accepted papers will be made public.
-                            </p>
-                            <p class="large text-muted">For any questions, please contact us at <a href="mailto:r2fm2024@googlegroups.com">r2fm2024@googlegroups.com</a>.
-                            </p> -->
+                            <p class="large text-muted"><b>Important Dates:</b></p>
+                            <ul class="large text-muted" style="float:left; width: 100%">
+                                <li>Jailbreaking competition material release: May 15, 2024 </li>
+                                <li>Submission deadline: [Deadline] </li>
+                                <li>Jailbreaking competition submission deadline: July 1, 2024 EOD AOE </li>
+                                <li>Author notification: [Notification] </li>
+                                <li>Camera-ready deadline: [Deadline] </li>
+                                <li>Workshop date: [Date] </li>
+                            </ul>
+
                             <br>
                         </div>
                     </div>
