--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <li>
                             <a class="page-scroll" href="index.html#call">Call for Papers</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a class="page-scroll" href="index.html#dates">Important Dates</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a class="page-scroll" href="index.html#program">Schedule</a>
                         </li>
@@ -315,7 +315,7 @@
     </section>
 
     <!-- Dates Section -->
-    <section id="dates">
+    <!-- <section id="dates">
         <div class="container">
 
             <div class="row">
@@ -346,7 +346,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- Dates Section -->
