--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                             <a href="https://vcherepanova.github.io/">
                                 <h4>Valeriia Cherepanova</h4>
                             </a>
-                            <p class="text-muted">UNC-Chapel Hill</p>
+                            <p class="text-muted">Amazon AWS AI/ML</p>
                         </div>
                     </div>
 
