--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
     </section>
 
     <!-- Panelist Section -->
-    <section id="speaker">
+    <section id="panelist">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
