--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand workshop-title" href="index.html#">ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries?</a>
+                <a class="navbar-brand workshop-title" href="index.html#">Red Teaming GenAI</a>
             </div>
     
             <!-- Collect the nav links, forms, and other content for toggling -->
