--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <header>
         <style>
             header {
-                background-image: url(img/bgggg.jpg);
+                background-image: url(img/bggggg.jpg);
                 color: #fff
             }
         </style>
@@ -102,7 +102,7 @@
 
                 <!-- <div class="intro-lead-in">May 11, 2024</div>
                 <br> -->
-                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div>
+                <!-- <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> -->
                 <!-- <div class="intro-lead-in"> Time Series Workshop @ <a href="https://icml.cc/Conferences/2019"
                         target=_blank>ICML 2019</a></br>June 14, 2019. Long Beach, USA</div> -->
                 <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a-->
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <h2 class="section-heading">Jailbreaking defense competition (sponsored by Arthur AI)</h2>
+                    <h2 class="section-heading">Jailbreaking defense competition</h2>
                     <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
             </div>
