--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <header>
         <style>
             header {
-                background-image: url(img/bggggg.jpg);
+                background-image: url(img/bg_2.jpg);
                 color: #fff
             }
         </style>
